--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -74,12 +74,18 @@ a:hover {
     height: 0;
   }
 }
+.sidebar-container {
+  width: 180px !important;
+}
 
 .app-main{
-  min-height: 100%
+  min-height: 100%;
+  top: 85px;
+  margin-left: 130px;
 }
 
 .app-container {
   padding: 20px;
 }
+
 
