Create widget components

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -80,8 +80,9 @@ a:hover {
 
 .app-main{
   min-height: 100%;
-  top: 85px;
-  margin-left: 130px;
+  top: 115px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .app-container {
