--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -81,11 +81,12 @@ a:hover {
 .app-main{
   min-height: 100%;
   top: 85px;
-  margin-left: 130px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .app-container {
-  margin-top: 85px;
+  margin-top: 10px;
   padding: 20px;
 }
 
