--- a/public/css/gcis.css
+++ b/public/css/gcis.css
@@ -177,7 +177,7 @@ body.vertical-layout.vertical-menu.menu-expanded .footer {
 }
 
 .main-menu li {
-  line-height: 2.45;
+  line-height: 4rem;
 }
 
 .main-menu.menu-dark .navigation > li > a {
@@ -211,7 +211,10 @@ body.vertical-layout.vertical-menu.menu-expanded .footer {
 }
 
 .fa {
-  margin: 0 0.8rem 0 0.1rem;
+  margin: 0 0.8rem 0.5rem -0.9rem;
+  font-size: 2.1rem;
+  width: 2.6rem;
+  text-align: center;
 }
 
 .card-profile-image {
@@ -381,6 +384,11 @@ form label {
   color: #053922;
 }
 
+a .fa,
+i.fa {
+  color: #519c4e;
+}
+
 .main-menu.menu-dark .navigation {
   background: none;
 }
@@ -424,7 +432,8 @@ button.btn,
 thead,
 a.btn,
 .board,
-.headboard.first {
+.headboard.first,
+.el-menu-item.is-active {
   background: #067144;
   color: #D3FFC9 !important;
 }
