commit my changes on my task

--- a/public/css/gcis.css
+++ b/public/css/gcis.css
@@ -607,3 +607,13 @@ tfoot,
   margin: inherit;
 }
 
+.el-form-item--mini .el-form-item__content,
+.el-form-item--mini .el-form-item__label {
+  line-height: 2px;
+}
+
+.el-form-item--small .el-form-item__content,
+.el-form-item--small .el-form-item__label {
+  line-height: 2px;
+}
+
