--- a/resources/sass/element-ui.scss
+++ b/resources/sass/element-ui.scss
@@ -68,3 +68,7 @@
   margin-bottom: 0px;
 }
 
+.el-form-item--mini .el-form-item__content, .el-form-item--mini .el-form-item__label{
+  line-height: 3px;
+}
+
